resources/css/style.css
html {
  font-size: 18px;
  background-color: white;
  font-family: helvetica;
}

body {
  line-height: 1.4rem;
}


header {
  background: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/tortoiseshell-optics/resources/images/glasses-bg.png);
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  height: 30rem;
  padding-top: 1rem;
}

/*main container section*/

.container {
  max-width: 960px;
  margin: auto;
}

/*header section */

nav {
  display: flex;
  background-color: cadetblue;
  color: white;
  align-items: center;
  justify-content: space-between;
  padding: 1rem 0;
  font-size: 1rem;
}

nav div {
  display: flex;
  align-items: center;
}

ul li {
  display: inline;
}

li {
  padding: 1rem 2rem 1rem 0;
}

nav img {
  margin-left: 2rem;
  margin-right: 1rem;
  height: 1.5rem;
}

.main-welcome {
  background-color: white;
  padding: 1.5rem 5rem;
  text-align: center;
  margin-top: 10rem;
  margin-right: -2rem;
  line-height: 1.2;
  font-size: 2rem;
  font-weight: bold;
}

.flex {
  display: flex;
}

header .flex {
  justify-content: flex-end;
}


/* featured benefits section */

.benefits {
  display: flex;
  justify-content: center;
}

.offer {
  display: flex;
  mheight: 8rem;
  width: 5rem;
  margin: 3rem;
  align-items: center;
  text-align: center;
  justify-content: space-between;
  flex-direction: column;
}

.offer img {
  width: 5rem;
  margin-bottom: 1rem;
}

img {
border-style: none;
}

.benefits .paper-sheet {
  width: 3.5rem;
}


/* about us section */


.info {
  width: 35%;
  margin-right: 5%;
  margin-bottom: 4rem;
}

.title {
  background-color: cadetblue;
  font-weight: bold;
  font-size: 1rem;
  color: white;
  padding: 0.5rem 1.25rem;
  max-width: 10rem;
}

.info p {
  padding: 1rem 0;
}

/* footer section */

footer {
  display: flex;
  align-items: center;
  background-color: azure;
  padding: 4rem;
}

footer img {
  height: 1.5rem;
  margin-right: 1rem;
}

